Version 3.1 0.07cvs
- Add gdb-like "signal" command
- Add "kill" command for those cases where "quit" doesn't work.

Version 3.1 0.06
2006-07-21

- Add gdb 'commands' command: 
  runs debugger commands at a specified breakpoint

- Add gdb 'info program'. (Shows program status)

- Add ability to invoke from inside a running program rather than
  at the outset (set_trace)

- Add a better line tracing:
   * shows bash nesting, 
   * bash subshell nesting
   * function nesting
   * source line preserving initial indentation

- Add line tracing command-line option in bashdb: -X, and long option --trace

- add ability to turn on and off line tracing from inside a program

- Revise sample sessions in bashdb document

- Sourcing a debugger command file now prints the 
  command before executing it.

- Executing a string (option -c or --command) shows the command
  to be run in the call stack.

- Attempt to get documentation on GNU Emacs section in order. Describe
  bashdbtrack.

- Go over documentation yet again. When will I ever get this right? 

Version 3.1 0.05 
2006-03-24

- Add complete (command completion), 

- Add cd, pwd

- Add gdb-style set/show logging.

- Better checking to see if we have  bash 3.1 (as opposed to 3.0)

- GNU Emacs debugging improvements, including...

- Add shell prompt tracking in GNU Emacs (bashdbtrack - like 
  Python's pdbtrack)

- Patches to allow VPATH (or build outside of source tree)

- Numerous documentation changes

- Break out command files even more.

Version 3.1 0.04 (initial 3.1 release)
2006-01-16

- Showing which command on a line with multiple commmands works again.
  Reinstate regression tests which use that.

- Add a loadable routine to read a script into an array fast. This
  speeds up the startup on reading large scripts very much.

- Install compiled GNU emacs lisp

- We were reporting script line sizes as one larger than the actual size

- Bash location matches installation in bashdb documentation
