@@ -32,7 +32,7 @@ AC_INIT([bashdb],[OK_BASH_VERS-relstatus],[bashdb-devel@lists.sourceforge.net])
 AM_PATH_LISPDIR
 AM_MAINTAINER_MODE
 AM_CONFIG_HEADER(config.h)
-AC_REVISION([$Id: configure.ac,v 1.20 2006/07/21 23:09:39 rockyb Exp $])dnl
+AC_REVISION([$Id: configure.ac,v 1.21 2006/10/03 08:54:45 rockyb Exp $])dnl
 AC_DEFINE([PACKAGE], [bashdb], [Bash Debugger])
 AC_DEFINE([VERSION], [OK_BASH_VERS-relstatus], [version string])
 
@@ -194,7 +194,9 @@ AC_CONFIG_FILES([Makefile \
 
 # Additional files needing substitution of values (not Makefiles).
 AC_CONFIG_FILES([bashdb], [chmod +x bashdb])
+AC_CONFIG_FILES([test/bugIFS.sh], [chmod +x test/bugIFS.sh])
 AC_CONFIG_FILES([test/hanoi.sh], [chmod +x test/hanoi.sh])
+AC_CONFIG_FILES([test/interrupt.sh], [chmod +x test/interrupt.sh])
 
 AC_CONFIG_FILES([ \
 	bashdb-trace \
@@ -202,7 +204,6 @@ AC_CONFIG_FILES([ \
 	dbg-main.inc \
 	test/check_common \
 	doc/macros.texi \
-        test/bugIFS.sh
 	])
 
 AC_CONFIG_COMMANDS([default],[[
