@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in -*-Makefile-*-.
-#$Id: Makefile.am,v 1.12 2006/07/16 21:24:32 rockyb Exp $
+#$Id: Makefile.am,v 1.13 2006/10/03 08:54:46 rockyb Exp $
 
 check_DATA = \
 	action.cmd \
@@ -41,6 +41,8 @@ check_DATA = \
 	finish.right \
 	finish.tests \
 	hanoi.sh.in \
+	interrupt.right \
+	interrupt.sh.in \
 	list.cmd \
 	list.right \
 	list.tests \
@@ -121,8 +123,8 @@ check_DATA = \
 	watch2.tests
 
 TESTS = run-action run-brkpt run-bugIFS run-command run-complete \
-	run-debug run-display \
-	run-finish run-list run-misc run-multi run-parm run-restart \
+	run-debug run-display run-finish \
+	run-interrupt run-list run-misc run-multi run-parm run-restart \
 	run-search run-settrace run-sig run-skip run-subshell \
         run-tbreak run-trace \
 	run-watch1 run-watch2
