@@ -1,0 +1,4 @@
+Program received signal SIGTERM (15)...
+->0 in file `interrupt.sh' at line 251
+->1 main() called from file `interrupt.sh' at line 0
+
