@@ -1,0 +1,14 @@
+#!@BASH_PROG@
+# $Id: interrupt.sh.in,v 1.1 2006/10/03 08:54:46 rockyb Exp $
+
+source @top_builddir@bashdb-trace -q -B -L @top_builddir@
+
+## FIXME
+## _Dbg_handler INT
+## echo "print: " ${_Dbg_sig_print[2]}
+## echo "stop: " ${_Dbg_sig_stop[2]}
+
+BASHDB_QUIT_ON_QUIT=1
+for i in `seq 100` ; do
+   sleep 5
+done
